--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
 
 <body>
 
+  <!--
+    - #MAIN
+  -->
+
   <main>
 
     <div id="particles-js"></div>
-
     <!--
       - #SIDEBAR
     -->
-
 
     <aside class="sidebar" data-sidebar>
 
@@ -236,7 +238,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.png
+                <img src="./assets/images/icon-design.svg
                 " alt="design icon" width="40">
               </div>
 
@@ -253,7 +255,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.png" alt="Web development icon" width="40">
+                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -269,7 +271,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.png" alt="mobile app icon" width="40">
+                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -1180,6 +1182,10 @@
   </main>
 
 
+
+
+
+
   <!--
     - custom js link
   -->
@@ -1192,74 +1198,73 @@
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
-
   <script>
-   particlesJS("particles-js", {
-  particles: {
-    number: {
-      value: 50,
-      density: {
-        enable: true,
-        value_area: 800,
+    particlesJS("particles-js", {
+      particles: {
+        number: {
+          value: 50,
+          density: {
+            enable: true,
+            value_area: 800,
+          },
+        },
+        shape: {
+          type: "circle",
+        },
+        color: {
+          value: "#ffffff",
+        },
+        opacity: {
+          value: 0.5,
+          anim: {
+            enable: true,
+            speed: 1,
+            opacity_min: 0.1,
+            sync: false,
+          },
+        },
+        size: {
+          value: 10,
+          random: true,
+          anim: {
+            enable: true,
+            speed: 5,
+            size_min: 1,
+            sync: false,
+          },
+        },
+        move: {
+          enable: true,
+          speed: 3,
+          direction: "none",
+          random: true,
+          straight: false,
+          out_mode: "out",
+        },
       },
-    },
-    shape: {
-      type: "circle",
-    },
-    color: {
-      value: "#ffffff",
-    },
-    opacity: {
-      value: 0.5,
-      anim: {
-        enable: true,
-        speed: 1,
-        opacity_min: 0.1,
-        sync: false,
+      interactivity: {
+        detect_on: "canvas",
+        events: {
+          onhover: {
+            enable: true,
+            mode: "repulse",
+          },
+          onclick: {
+            enable: true,
+            mode: "push",
+          },
+        },
+        modes: {
+          repulse: {
+            distance: 100,
+          },
+          push: {
+            particles_nb: 4,
+          },
+        },
       },
-    },
-    size: {
-      value: 10,
-      random: true,
-      anim: {
-        enable: true,
-        speed: 5,
-        size_min: 1,
-        sync: false,
-      },
-    },
-    move: {
-      enable: true,
-      speed: 3,
-      direction: "none",
-      random: true,
-      straight: false,
-      out_mode: "out",
-    },
-  },
-  interactivity: {
-    detect_on: "canvas",
-    events: {
-      onhover: {
-        enable: true,
-        mode: "repulse",
-      },
-      onclick: {
-        enable: true,
-        mode: "push",
-      },
-    },
-    modes: {
-      repulse: {
-        distance: 100,
-      },
-      push: {
-        particles_nb: 4,
-      },
-    },
-  },
-  retina_detect: true,
-});
+      retina_detect: true,
+    });
 
 
   </script>
